Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-6984

Runtime Warning: "QMetaObject::indexOfSignal: signal finished() from ProjectExplorer::BuildStep redefined in Qt4ProjectManager::Internal::S60DeployStep"

XMLWordPrintable

      http://codereview.qt.nokia.com/1316 introduced a 'finished()' signal in BuildStep, which conflicts with void finished(bool success = true); in S60DeployStep.

        For Gerrit Dashboard: QTCREATORBUG-6984
        # Subject Branch Project Status CR V

            dt Daniel Teske
            kkohne Kai Köhne
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes