Rename S60DeployStep::finished signal

I introduced a finished signal to the base class.

Task-number: QTCREATORBUG-6984
Change-Id: I785ca3dae496b3ca220ae4d1bc9c9b091c6e7237
Reviewed-by: Paweł Polański <pawel.3.polanski@nokia.com>